Closed Bug 1574100 Opened 5 years ago Closed 5 years ago

Assertion failure: aLayer.GetReferentId(), at APZCTreeManager.cpp:835

Categories

(Core :: Panning and Zooming, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox70 --- fixed

People

(Reporter: hiro, Assigned: botond)

References

(Blocks 1 open bug)

Details

Attachments

(3 files, 1 obsolete file)

I am less sure this is a fission specific issue or not.

Attaching file is a patch including a browser mochitest which causes this assertion.

I am going to post a backtrace for the assertion in the next comment.

Attached file backtrace

The patch I posted didn't include browser.ini file. Sorry for that.

Assignee: nobody → hikezoe.birchill
Attachment #9085688 - Attachment is obsolete: true
Assignee: hikezoe.birchill → nobody

The test times out for me, but it doesn't reproduce the assertion.

Correction: I can reproduce the assertion, if I run the test normally. (Before, I was running it with xvfb-run, that seems to interfere with this test somehow.)

I think I see what's happening: in cases where a RefLayer has multiple frame metrics, only the bottom LayerMetricsWrapper conceptually represents the ref layer for purposes of building the hit-testing tree. Accordingly, LayerMetricsWrapper should only return RefLayer properties if AtBottomLayer() is true.

This is done correctly in GetReferentId(), but not in GetEventRegionsOverride().

Assignee: nobody → botond

We only want the bottom LayerMetricsWrapper / WebRenderScrollDataWrapper to
be treated as a ref layer, and only ref layers have event regions overrides.

Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4229066f4943
For RefLayers with multiple metrics, only expose the event regions override for the bottom one. r=tnikkel

(In reply to Hiroyuki Ikezoe (:hiro) from comment #0)

I am less sure this is a fission specific issue or not.

This is unlikely to affect non-Fission. While theoretically possible, it would require the browser UI to be scrollable, or something like that.

Thanks for the quick fix! Amazing!

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: