Bug 1574100 - For RefLayers with multiple metrics, only expose the event regions override for the bottom one. r=tnikkel

We only want the bottom LayerMetricsWrapper / WebRenderScrollDataWrapper to
be treated as a ref layer, and only ref layers have event regions overrides.

Differential Revision: https://phabricator.services.mozilla.com/D42339

--HG--
extra : moz-landing-system : lando